# aiida_siesta_plugin

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGELOG.md  Dockerfile  LICENSE.txt  MANIFEST.in  PyPI-README.rst  README.md  README.rst  README_docker_compose.md  docker-compose.yml  docker-start.sh  pyproject.toml  setup.cfg  setup.json  setup.py  setup_links.sh  startup_firsttime_norebuild.sh  test_requirements.txt
.github/workflows/: ci.yml  develop.yml
aiida/: Dockerfile
aiida/scripts/core/: aiida_setup.sh  computer-configure-input.txt
aiida/scripts/plugin/: code-setup-input.txt
aiida_siesta/: __init__.py  issues.md
aiida_siesta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aiida_siesta/calculations/: fcbuild.py  siesta.edge  siesta.py  stm.py  tkdict.py  vibra.py  vibrator.py
aiida_siesta/commands/: data_psf.py  data_psml.py  psfdata.py
aiida_siesta/data/: atomic_orbitals.py  basis.py  common.py  eig.py  ion.py  lua.py  pdos.py  psf.py  psml.py
aiida_siesta/docs/: Makefile  conf.py  index.rst  installation.rst
aiida_siesta/docs/plugins/: index.rst  siesta.rst  stm.rst  vibra.rst
aiida_siesta/docs/siesta/: standard.rst
aiida_siesta/docs/tutorials/: First workchain.ipynb  example_bands.py  icn2-2020.rst  index.rst  my_protocols_registry.yaml  siesta-school-2021.rst
aiida_siesta/docs/utils/: fdfdict.rst  index.rst  pao_manager.rst  protocols_system.rst
aiida_siesta/docs/workflows/: bandgap.py  bandgap.rst  bands.rst  bands_and_relax.rst  base.rst  basis_opt.rst  converger.rst  eos.rst  epsilon.rst  index.rst  iterator.rst  neb_base.rst  protocols_system.rst  seq_converger.rst  stm.rst  vibra.rst
aiida_siesta/examples/: 00_README  uploadfamily.py
aiida_siesta/examples/fixtures/: O2_ICSD_173933.cif  Si.ion.xml
aiida_siesta/examples/plugins/: 00_README
aiida_siesta/examples/workflows/: 00_README  band.py  bands_with_protocol.py  example_bandgap.py  example_barrier_exchange.py  example_barrier_vacancy.py  example_basis_opt.py  example_converge_meshcutoff.py  example_convergence.py  example_diffusion.py  example_dos.py  example_eos.py  example_epsilon.py  example_family_and_ghost.py  example_first.py  example_iterate.py  example_neb_ghost.py  example_protocols.py  example_protocols_stm.py  example_seq_converg.py  example_seq_converger.py  example_simplex.py  example_stm.py  example_stm_magn.py  example_two_step_opt.py  get_stm_image.py  new_ex_converge.py  new_ex_iterate.py  new_ex_seq_converge.py  pattern.py  psml_base_wk.py  (+11 more)
aiida_siesta/groups/: pseudos.py
aiida_siesta/ignored_docs/: code.rst
aiida_siesta/legacy/: test_requirements.txt
aiida_siesta/parsers/: json_time.py  siesta.edge  siesta.py  stm.py  vibra.py
aiida_siesta/tests/: all.sh  config.yml  conftest.py  conftest.py.bak  test_aiida_pytest_config.py  test_bands.py  test_bands_wk.py  test_base_workflow.py  test_config.py  test_endpoints.py  test_sample.py  test_serial_workfunction.py  test_simple_submission.py
aiida_siesta/utils/: converge_absclass.py  epsilon.py  generator_absclass.py  inputs_generators.py  interpol.py  iterate_absclass.py  neb.py  pao_manager.py  pdos_manager.py  plot_neb_info.py  protocols.py  protocols_registry.yaml  structures.py  tkdict.py  warn.py  xyz_utils.py
aiida_siesta/workflows/: NOTES  _for_optimization.py  bandgap.py  bands.py  base.py  base.py.orig  baseprotocol.py  basis_optimization.py  buildsc.py  child.py  converge.py  dos.py  eos.py  epsilon.py  exchange_barrier.py  interstitial_barrier.py  iterate.py  neb_base.py  relax_with_protocol.py  simplex_basis.py  stm.py  two_steps_optimization.py  utils.py  vacancy_exchange_barrier.py  vibra.py  vibrawf.py
aiida_siesta_plugin/data/: psf.py
compose-init/: run_once_generate_passwords.sh
dockerscripts/: code-setup.txt  computer-setup.txt  setup_develop.sh
siesta_plugin_files/workchain/: README
test_suite/: README.md  docker-compose.yml  startup_firsttime.sh  test_compose.py
test_suite/aiida/: Dockerfile  README.md
test_suite/compose-init/: .gitignore  README.md
test_suite/torquessh-withplugin/: Dockerfile
tests/: conftest.py
tests/calculations/: test_fdfdict.py  test_siesta.py  test_stm.py
tests/data/: test_eig.py  test_ions.py  test_pseudos.py
tests/parsers/: test_siesta.py  test_stm.py
tests/plugin_configuration/: test_endpoints.py  test_version.py
tests/utils/: test_convereger_absclass.py  test_generator_absclass.py  test_inputs_generators.py  test_iterator_absclass.py  test_pao_manager.py  test_protocols.py
tests/workflows/: test_bandgap.py  test_base.py  test_basis_opt.py  test_converge.py  test_eos.py  test_epsilon.py  test_iterate.py  test_neb_base.py  test_simplex_basis.py  test_stm.py  test_two_steps_opt.py
torquessh-withplugin/: Dockerfile  README.md
(+287 files in other folders)
